tests/fixtures/invalid/pow_float_int_int.py
# Cannot call pow() with Float, Int, Int
x = pow(1.0, 1, 1)
